--- a/wangshuo/css/style.css
+++ b/wangshuo/css/style.css
@@ -6,6 +6,32 @@
 .index,.fc{
     margin-bottom: 100px;
 }
+/*弹窗效果*/
+.tc img{
+    width: 100%;
+}
+.tc{
+    position: fixed;
+    top: 0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    background: rgba(51, 51, 51, 0.46);
+}
+.ct{
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%,-50%);
+}
+.tc span{
+    color:#777777;
+    background: #999999;
+    position: fixed;
+    right: 15px;
+    top: 10px;
+}
+/*弹窗效果*/
 /*底部导航开始*/
 nav{
     position: fixed;
@@ -202,9 +228,12 @@ header .container .glyphicon-search{
     text-decoration: none;
     font-weight: bold;
 }
+.fx img{
+    width: 50%;
+}
 /*滑动轮播*/
 /*main部分*/
-.main .mn a img{
+.main img{
     width: 100%;
     margin-top: 8px;
 }
