--- a/wangtianci/css/style.css
+++ b/wangtianci/css/style.css
@@ -761,7 +761,7 @@ button[type=submit] {
     top: -51px;
     right: -138px;
 }
-.jingxuan{
+.fc .jingxuan{
     margin-top: 260px;
 }
 /*蜂巢header的代码*/
